--- a/index1.html
+++ b/index1.html
@@ -26,7 +26,8 @@ body{
 	max-width: 100%;
 	background-color: white;
 	height: 80px;
-	top:0;
+	margin-bottom: 0;
+	margin-top: 0;
 			
 
 }
@@ -227,7 +228,7 @@ body{
 </head>
 <body>
   <div class="top">
-  </div>
+   </div>
   <div class="nav" id="nav">
   	<a href="#">Home</a>
   	<a href="#">About Us</a>
