--- a/index1.html
+++ b/index1.html
@@ -31,32 +31,37 @@ body{
 			
 
 }
-.nav{
-	overflow: hidden;
-	background-color: #ff751a;
-	max-width: 100%;
-	z-index: -1;
+.nav {
+  overflow: hidden;
+  background-color: #ff751a;
+  max-width: 100%;
+  color: white;
 }
-.nav a:hover{
-	background-color: white;
-	color: #ff751a;
-	;
 
-}
 .nav a {
-       float: left;
-       display: block;
-       color: #f2f2f2;
-       text-align: center;
-       padding: 14px 16px;
-       text-decoration: none;
-       font-size: 17px;
+  float: left;
+  display: block;
+  color: white;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.nav a:hover {
+  background-color: white;
+  color: #ff751a;
 }
 .nav a:first-child{
-                  margin-left:32%;
+	margin-left: 30%;
 }
-.nav .icon{
-	display: none;
+.nav .icon {
+  display: none;
+}
+@media screen and (max-width: 1000px){
+	.nav a:first-child{
+  	margin-left: 20%;
+  }
 }
 @media screen and (max-width: 800px) {
   .nav a:not(:first-child) {display: none;}
@@ -64,12 +69,12 @@ body{
     float: right;
     display: block;
   }
+  
 }
-
 
 @media screen and (max-width: 800px) {
   .nav.responsive {position: relative;}
-  .nav.responsive a.icon {
+  .nav.responsive .icon {
     position: absolute;
     right: 0;
     top: 0;
@@ -79,6 +84,7 @@ body{
     display: block;
     text-align: left;
   }
+
 }
 .check{
 	margin-top: 10px;
