changes to responsive navbar

--- a/index1.html
+++ b/index1.html
@@ -58,9 +58,14 @@ body{
 .nav .icon {
   display: none;
 }
-@media screen and (max-width: 1000px){
+@media screen and (max-width: 1100px){
 	.nav a:first-child{
-  	margin-left: 20%;
+  	margin-left: 15%;
+  }
+}
+@media screen and (max-width: 900px){
+	.nav a:first-child{
+  	margin-left: 10%;
   }
 }
 @media screen and (max-width: 800px) {
@@ -83,6 +88,9 @@ body{
     float: none;
     display: block;
     text-align: left;
+  }
+  .nav a:first-child{
+  	margin-left: 40%;
   }
 
 }
@@ -240,6 +248,7 @@ body{
   	<a href="#">About Us</a>
   	<a href="#">Academics</a>
   	<a href="#">Admission</a>
+  	<a href="#">Student Life</a>
   	<a href="#">Contact Us</a>
   	<a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
   </div>
