--- a/index1.html
+++ b/index1.html
@@ -9,193 +9,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 	<title>Welcome To Baba Haridass Institute Of Nursing Education</title>
+  <link rel="stylesheet" type="text/css" href="style.css">
 	<style type="text/css">
-*{
-  box-sizing: border-box;
-}
-body{
-	background-color: #f7f7f7;
-}
-.whitebg{
-	background-color: white;
-}
-.mainimg{
-	margin-left: 20%;
-}
-.top{
-	max-width: 100%;
-	background-color: white;
-	height: auto;
-	margin-bottom: 0;
-	margin-top: -18px;
-  color: #ff751a;
-  padding-bottom: 15px;
-  overflow: hidden;
-}
-.headimg{
-  float: left;
-  margin-left: 25%;
-  padding-top: 5px;
-  margin-top: 30px;
-}
-.headname{
-  margin-top: 30px;
-  float: left;
-  margin-left: 30px;
-}
-.top h2{
-   font-weight: bold;
-}
-.top h5{
-  text-align: center;
-}
-.nav {
-  overflow: hidden;
-  background-color: #ff751a;
-  max-width: 100%;
-  color: white;
-}
-
-.nav a {
-  float: left;
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  font-size: 17px;
-}
-
-.nav a:hover {
-  background-color: white;
-  color: #ff751a;
-}
-.nav a:first-child{
-	margin-left: 30%;
-}
-.nav .icon {
-  display: none;
-}
-@media screen and (max-width: 1100px){
-	.nav a:first-child{
-  	margin-left: 15%;
-  }
-}
-@media screen and (max-width: 1100px){
-  .headimg{
-    margin-left: 13%;
-  }
- 
-}
-@media screen and (max-width: 900px){
-  .headimg{
-    margin-left: 8%;
-  }
- 
-}
-@media screen and (max-width: 850px){
-  .headimg{
-    margin-left: 5%;
-  }
-  .headname h2{
-    font-size: 24px;
-  }
-  .headname h5{
-    font-size: 14px;
-  }
-}
-@media screen and (max-width: 700px){
-  .headimg{
-    margin-left: 5%;
-  }
-  .headname h2{
-    font-size: 20px;
-  }
-  .headname h5{
-    font-size: 12px;
-  }
-}
-@media screen and (max-width: 590px){
-  .headimg{
-    margin-left: 5%;
-  }
-  .headname h2{
-    font-size: 16px;
-  }
-  .headname h5{
-    font-size: 10px;
-  }
-}
-@media screen and (max-width: 500px){
-  .headimg{
-    margin-left: 10px;
-  }
-  .headname{
-    margin-left: 15px;
-  }
-  .headname h2{
-    font-size: 14px;
-  }
-  .headname h5{
-    font-size: 8px;
-  }
-}
-@media screen and (max-width: 450px){
-  .headimg{
-    margin-left: 5px;
-  }
-  .headname{
-    margin-left: 5px;
-  }
-  .headname h2{
-    font-size: 13px;
-  }
-  .headname h5{
-    font-size: 8px;
-  }
-}
-@media screen and (max-width: 900px){
-	.nav a:first-child{
-  	margin-left: 10%;
-  }
-}
-
-@media screen and (max-width: 800px) {
-  .nav a:not(:first-child) {display: none;}
-  .nav a.icon {
-    float: right;
-    display: block;
-  }
-  
-}
-
-@media screen and (max-width: 800px) {
-  .nav.responsive {position: relative;}
-  .nav.responsive .icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  .nav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-  }
-  .nav a:first-child{
-  	margin-left: 40%;
-  }
-
-}
-.check{
-	margin-top: 10px;
-	height: auto;
-	overflow: hidden;
-	width: 70%;
-	border:1px solid white;
-	margin-left: auto;
-	margin-right: auto;
-	
-}
 .photo{
 	border: 1px solid #ff751a;
 }
@@ -307,19 +122,6 @@ body{
         font-size: 18px;
 	}
 }
-.footer{
-	width: 100%;
-	background-color: #ff751a;
-	color: white;
-    overflow: hidden;
-	border:1px solid #ff751a;
-}
-.center-align{
-	text-align: center;
-}
-.gap{
-	padding-bottom: 5px;
-}
 </style>
 <script type="text/javascript">
 	function myFunction() {
@@ -343,12 +145,12 @@ body{
   </div>
    </div>
   <div class="nav" id="nav">
-  	<a href="#">Home</a>
+  	<a href="index1.html">Home</a>
   	<a href="#">About Us</a>
   	<a href="#">Academics</a>
   	<a href="#">Admission</a>
   	<a href="#">Student Life</a>
-  	<a href="#">Contact Us</a>
+  	<a href="contact_us.html">Contact Us</a>
   	<a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
   </div>
   <div class="check whitebg">
