admission page added

--- a/about_us.html
+++ b/about_us.html
@@ -58,10 +58,10 @@
    </div>
   <div class="nav" id="nav">
   	<a href="index1.html">Home</a>
-  	<a href="#">About Us</a>
+  	<a href="about_us.html">About Us</a>
   	<a href="#">Academics</a>
-  	<a href="#">Admission</a>
-  	<a href="#">Student Life</a>
+  	<a href="admission.html">Admission</a>
+  	<a href="student_life.html">Student Life</a>
   	<a href="contact_us.html">Contact Us</a>
   	<a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
   </div>
@@ -93,10 +93,7 @@
 	<span class="glyphicon glyphicon-chevron-right"> </span><a href="#" style="text-decoration: none;color: white;font-size: 16px;">&nbsp;&nbsp;Sports and Culturals</a><br>
 	<span class="glyphicon glyphicon-chevron-right"> </span><a href="#" style="text-decoration: none;color: white;font-size: 16px;">&nbsp;&nbsp;Downloads</a><br>
 	<span class="glyphicon glyphicon-chevron-right"> </span><a href="#" style="text-decoration: none;color: white;font-size: 16px;">&nbsp;&nbsp;Academic Calendar</a><br>
-	<span class="glyphicon glyphicon-chevron-right"> </span><a href="#" style="text-decoration: none;color: white;font-size: 16px;">&nbsp;&nbsp;</a><br>
-	<span class="glyphicon glyphicon-chevron-right"> </span><a href="#" style="text-decoration: none;color: white;font-size: 16px;">&nbsp;&nbsp;</a><br>
-	<span class="glyphicon glyphicon-chevron-right"> </span><a href="#" style="text-decoration: none;color: white;font-size: 16px;">&nbsp;&nbsp;</a><br>
-	<span class="glyphicon glyphicon-chevron-right"> </span><a href="#" style="text-decoration: none;color: white;font-size: 16px;">&nbsp;&nbsp;</a><br>
+	
 </div>
 <div class="col-sm-4 gap">
 	<h3 style="text-align: center;"><strong>Contact us</strong></h3><hr>
