--- a/index1.html
+++ b/index1.html
@@ -40,10 +40,10 @@
   padding: 10px;
   text-align: center;
   color: #ff751a;
+  border:1px solid #ff751a;
+  border-top: none;
 }
-img{
-  left: 0;
-}
+
 .gallery{
   width: 95%;
   margin-left: auto;
@@ -56,16 +56,14 @@ img{
   margin-top: 50px;
   
 }
-.photo{
-  border: 1px solid #ff751a;
-  
-}
+
 .photo a:hover{
   border-color: black;
 }
 .photo img{
   width: 100%;
   height: auto;
+  border:1px solid #ff751a;
 }
 .principal-content, .announce-news{
   overflow: hidden;
@@ -93,8 +91,8 @@ img{
     <a href="index1.html">Home</a>
     <a href="about_us.html">About Us</a>
     <a href="#">Academics</a>
-    <a href="#">Admission</a>
-    <a href="#">Student Life</a>
+    <a href="admission.html">Admission</a>
+    <a href="student_life.html">Student Life</a>
     <a href="contact_us.html">Contact Us</a>
     <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
   </div>
@@ -118,6 +116,9 @@ img{
 <h5  style="text-align: right;"><a href="#" style="margin-right: 17px;margin-top: 100px;color: #ff751a;">More Photos&nbsp;<span class="glyphicon glyphicon-arrow-right"></span></a></h5>
 </div>
 <div class="principal-content">
+<div class="col-sm-12">
+  <h3 style="color: #ff751a">Principal's Desk</h3><hr style="border-bottom: 1px solid #ff751a;">
+</div>
 <div class="col-sm-4" >
 <div class="photo" style="height: 80%;">
    
@@ -174,10 +175,7 @@ img{
   <span class="glyphicon glyphicon-chevron-right"> </span><a href="#" style="text-decoration: none;color: white;font-size: 16px;">&nbsp;&nbsp;Sports and Culturals</a><br>
   <span class="glyphicon glyphicon-chevron-right"> </span><a href="#" style="text-decoration: none;color: white;font-size: 16px;">&nbsp;&nbsp;Downloads</a><br>
   <span class="glyphicon glyphicon-chevron-right"> </span><a href="#" style="text-decoration: none;color: white;font-size: 16px;">&nbsp;&nbsp;Academic Calendar</a><br>
-  <span class="glyphicon glyphicon-chevron-right"> </span><a href="#" style="text-decoration: none;color: white;font-size: 16px;">&nbsp;&nbsp;</a><br>
-  <span class="glyphicon glyphicon-chevron-right"> </span><a href="#" style="text-decoration: none;color: white;font-size: 16px;">&nbsp;&nbsp;</a><br>
-  <span class="glyphicon glyphicon-chevron-right"> </span><a href="#" style="text-decoration: none;color: white;font-size: 16px;">&nbsp;&nbsp;</a><br>
-  <span class="glyphicon glyphicon-chevron-right"> </span><a href="#" style="text-decoration: none;color: white;font-size: 16px;">&nbsp;&nbsp;</a><br>
+  
 </div>
 <div class="col-sm-4 gap">
   <h3 style="text-align: center;"><strong>Contact us</strong></h3><hr>
