academics - curriculum added

--- a/admission.html
+++ b/admission.html
@@ -49,8 +49,8 @@
   <div class="nav" id="nav">
   	<a href="index1.html">Home</a>
   	<a href="about_us.html">About Us</a>
-  	<a href="#">Academics</a>
-  	<a href="admission.html">Admission</a>
+  	<a href="academics.html">Academics</a>
+  	<a href="admission.html" class="active">Admission</a>
   	<a href="student_life.html">Student Life</a>
   	<a href="contact_us.html">Contact Us</a>
   	<a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
