--- a/index1.html
+++ b/index1.html
@@ -90,7 +90,7 @@
   <div class="nav" id="nav">
     <a href="index1.html">Home</a>
     <a href="about_us.html">About Us</a>
-    <a href="#">Academics</a>
+    <a href="academics.html">Academics</a>
     <a href="admission.html">Admission</a>
     <a href="student_life.html">Student Life</a>
     <a href="contact_us.html">Contact Us</a>
@@ -103,11 +103,11 @@
    <div class="about">Image 2</div>
 </div>
 <div class="col-sm-4 photo">
-   <img src="1.jpg" style="height: 200px;">
+   <img src="2.jpg" style="height: 200px;">
    <div class="about">Image 2</div>
 </div>
 <div class="col-sm-4 photo">
-   <img src="1.jpg" style="height: 200px;">
+   <img src="3.jpg" style="height: 200px;">
    <div class="about">Image 2</div>
 </div>
 
