--- a/about_us.html
+++ b/about_us.html
@@ -33,17 +33,8 @@
 		color: #ff751a;
 	}
 	
-    .content1{
-    	margin-top: 120px;
-    }
-    #map_canvas {
-      width: 500px;
-      height: 400px;
-      margin-left: auto;
-      margin-right: auto;
-      margin-top: 10px;
-                  }
     
+   
 </style>
 </head>
 <body>
@@ -58,8 +49,8 @@
    </div>
   <div class="nav" id="nav">
   	<a href="index1.html">Home</a>
-  	<a href="about_us.html">About Us</a>
-  	<a href="#">Academics</a>
+  	<a href="about_us.html" class="active">About Us</a>
+  	<a href="academics.html">Academics</a>
   	<a href="admission.html">Admission</a>
   	<a href="student_life.html">Student Life</a>
   	<a href="contact_us.html">Contact Us</a>
