All pages added

--- a/curriculum.html
+++ b/curriculum.html
@@ -71,24 +71,32 @@
         <div class="nav-content">
           <div class="nav-sub">
             <ul>
-              <li><a href="#">Courses</a></li>
               <li><a href="curriculum.html">Curriculum</a></li>
-              <li><a href="#">Examinations</a></li>
+              <li><a href="exams.html">Examinations</a></li>
             </ul>
           </div>
         </div>
       </li>
       <li>
-        <a href="admission.html" class="nav-item">Admission</a>
-      </li>
+        <a href="#" class="nav-item">Admission</a>
+        <div class="nav-content">
+          <div class="nav-sub">
+            <ul>
+              <li><a href="courses_offered.html">Courses Offered</a></li>
+              <li><a href="adm_procedure.html">Procedure</a></li>
+              <li><a href="fees.html">Fees</a></li>
+            </ul>
+          </div>
+        </div>
+      </li>>
       <li>
         <a href="#" class="nav-item">Student Life</a>
         <div class="nav-content">
           <div class="nav-sub">
             <ul>
-              <li><a href="#">Hostel</a></li>
-              <li><a href="#">Facilities</a></li>
-              <li><a href="#">Extra Curriculur Activities</a></li>
+              <li><a href="hostel.html">Hostel</a></li>
+              <li><a href="facilities.html">Facilities</a></li>
+              <li><a href="extracurriculars.html">Extra Curriculur Activities</a></li>
             </ul>
           </div>
         </div>
@@ -102,9 +110,8 @@
 </div>
   <div class="check whitebg">
   <div class="heading">
-    <h3>Academics</h3><hr align="left" style="border-bottom: 1px solid #ff751a;width: 100%;">
+    <h3>Curriculum</h3><hr align="left" style="border-bottom: 1px solid #ff751a;width: 100%;">
   </div>
-  <h3 class="maincol"><u>Curriculum:</u></h3>
   <br>
   <b> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="glyphicon glyphicon-arrow-right maincol"></span>&nbsp;&nbsp; <span style="color: #ff751a; font-size: 18px;">GNM (General Nursing & Midwifery Course)</span></b><br><br>
   <table class="table-striped table-bordered">
