--- a/student_life.html
+++ b/student_life.html
@@ -46,15 +46,59 @@
   <h5>Approved By: Indian Nursing Council (INC) & Delhi Nursing Council (DNC)</h5>
   </div>
    </div>
-  <div class="nav" id="nav">
-  	<a href="index1.html">Home</a>
-  	<a href="about_us.html">About Us</a>
-  	<a href="academics.html">Academics</a>
-  	<a href="admission.html">Admission</a>
-  	<a href="student_life.html" class="active">Student Life</a>
-  	<a href="contact_us.html">Contact Us</a>
-  	<a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
-  </div>
+  <div class="parent">
+  <div class="nav-gap">
+  <nav class="nav-main">
+  
+    <ul>
+      <li>
+        <a href="index1.html" class="nav-item">Home</a>
+      </li>
+      <li>
+        <a href="about_us.html" class="nav-item">About Us</a>
+      </li>
+      <li>
+        <a href="#" class="nav-item">Academics</a>
+        <div class="nav-content">
+          <div class="nav-sub">
+            <ul>
+              <li><a href="curriculum.html">Curriculum</a></li>
+              <li><a href="exams.html">Examinations</a></li>
+            </ul>
+          </div>
+        </div>
+      </li>
+      <li>
+        <a href="#" class="nav-item">Admission</a>
+        <div class="nav-content">
+          <div class="nav-sub">
+            <ul>
+              <li><a href="courses_offered.html">Courses Offered</a></li>
+              <li><a href="adm_procedure.html">Procedure</a></li>
+              <li><a href="fees.html">Fees</a></li>
+            </ul>
+          </div>
+        </div>
+      </li>>
+      <li>
+        <a href="#" class="nav-item">Student Life</a>
+        <div class="nav-content">
+          <div class="nav-sub">
+            <ul>
+              <li><a href="hostel.html">Hostel</a></li>
+              <li><a href="facilities.html">Facilities</a></li>
+              <li><a href="extracurriculars.html">Extra Curriculur Activities</a></li>
+            </ul>
+          </div>
+        </div>
+      </li>
+      <li>
+        <a href="contact_us.html" class="nav-item">Contact Us</a>
+      </li>
+    </ul>
+    </div>
+  </nav>
+</div>
   <div class="check whitebg">
   <div class="heading">
     <h3>Student Life</h3><hr align="left" style="border-bottom: 1px solid #ff751a;width: 100%;">
