--- a/exams.html
+++ b/exams.html
@@ -40,7 +40,7 @@
 <body>
   <div class="top">
   <div class="headimg">
-  <img src="sai.png">
+  <img src="baba.png">
   </div>
   <div class="headname">
   <h2>Baba Haridass Institute of Nursing Education</h2>
@@ -88,7 +88,7 @@
             <ul>
               <li><a href="hostel.html">Hostel</a></li>
               <li><a href="facilities.html">Facilities</a></li>
-              <li><a href="extracurriculars.html">Extra Curriculur Activities</a></li>
+              <li><a href="extracurriculars.html">Rules & Regulations</a></li>
             </ul>
           </div>
         </div>
@@ -103,11 +103,65 @@
 </div>
   <div class="check whitebg">
   <div class="heading">
-    <h3>Examinations</h3><hr align="left" style="border-bottom: 1px solid #ff751a;width: 100%;">
+    <h3>Examination & Evaluation</h3><hr align="left" style="border-bottom: 1px solid #ff751a;width: 100%;">
   </div>
   <div class="info">
-  	
+  <p>During first year of training programme, students will be evaluated after 12 weeks to assess the students ability to continue the course.
+Only those candidates who pass in this preliminary period will be allowed to continue the course.</p>
+<p>The student who does not complete the classes and clinical field experience will not be allowed to sit for the examination. </p><br>
 
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="glyphicon glyphicon-arrow-right maincol"></span>&nbsp;&nbsp; <span style="color: #ff751a; font-size: 18px;">Internal Assessment</span><br><br>
+<ul>Internal Assessment of 25 marks is earmarked for each subject and the criteria for internal assessment is as follow:<br><br>
+
+<ol style="list-style-type: decimal;">
+<li>Class & Clinical attendance</li>
+<li>Clinical Evaluation</li>
+<li>Nursing care plan</li>
+<li>Case study/case presentation</li>
+<li>Observation visit/health teaching</li>
+<li>Monthly class tests</li>
+<li>Quiz tests/Assignments</li>
+<li>Drug study</li>
+<li>Diary/I.C.U. Gadgets</li>
+</ol>
+</ul><br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="glyphicon glyphicon-arrow-right maincol"></span>&nbsp;&nbsp; <span style="color: #ff751a; font-size: 18px;">Examining Body</span><br><br>
+<ul>
+  <b>Delhi Nursing Council</b> is the examining body for admission to examination. Eligibility for Admission to Examination is strictly as per INC norms. A candidates shall be eligible for the admission to the state council/Board examination if the Principal of the school certifies that:<br><br>
+  <ol>
+    <li>She has completed not less than eleven months of the course in each year.</li>
+    <li>She has a minimum of 75% attendance (irrespective of the kind of absence in theory and practical in each subject for appearing for examinations.</li>
+    <li>She must have 100% attendance in each of the clinical area before the award of completion certificate.</li>
+    <li>The overall performance of the student and her conduct during the entire academic year has been satisfactory.</li>
+    <li>The student has passed in the internal assessment in each subject i.e., both in the teaching and practical by securing 50% marks separately in each theory and practical(s).</li>
+    <li>The record of practical experience is complete.</li>
+  </ol><br>
+  <p><b>Note: </b>The principal shall send to the council/Board the internal assessment for each subject i.e. both theory and practical(s).</p>
+</ul>
+<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="glyphicon glyphicon-arrow-right maincol"></span>&nbsp;&nbsp; <span style="color: #ff751a; font-size: 18px;">Grading of Examination</span><br><br>
+<ul>
+  Examination shall be graded on the aggregate marks of the programme as follow :<br><br>
+  <table class="table-bordered table-striped" style="width: 50%;text-align: center;">
+    <tr>
+      <td>Distinction</td>
+      <td>80% and above</td>
+    </tr>
+    <tr>
+      <td>First Division</td>
+      <td>70% - 79.9%</td>
+    </tr>
+    <tr>
+      <td>Second Division</td>
+      <td>60% - 69.9%</td>
+    </tr>
+    <tr>
+      <td>Pass</td>
+      <td>50% - 59.9%</td>
+    </tr>
+  </table>
+</ul>
+</div>
   </div>
 <div class="footer">
 	<div class="col-sm-4 center-align gap">
