--- a/extracurricular.html
+++ b/extracurricular.html
@@ -88,7 +88,7 @@
             <ul>
               <li><a href="hostel.html">Hostel</a></li>
               <li><a href="facilities.html">Facilities</a></li>
-              <li><a href="extracurriculars.html">Extra Curriculur Activities</a></li>
+              <li><a href="extracurricular.html">Extra Curriculur Activities</a></li>
             </ul>
           </div>
         </div>
@@ -103,12 +103,25 @@
 </div>
   <div class="check whitebg">
   <div class="heading">
-    <h3>Extra - Curricular Activities</h3><hr align="left" style="border-bottom: 1px solid #ff751a;width: 100%;">
+    <h3>Rules & Regulations</h3><hr align="left" style="border-bottom: 1px solid #ff751a;width: 100%;">
   </div>
   <div class="info">
-  	
-
-  </div>
+  &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="glyphicon glyphicon-arrow-right maincol"></span>&nbsp;&nbsp; <span style="color: #ff751a; font-size: 18px;">General Directions</span><br><br>
+  <ul>
+    <li>Stay in hostel is compulsory.</li>
+    <li>Fees are payable in advance. Fees and other payable in advance. Fees and other charges once paid by the candidate are not refundable in full or in part or any account whatsoever.</li>
+    <li>Ragging is strictly prohibited.</li>
+    <li><b>Academic:</b>
+    <ol style="list-style-type: lower-alpha;">
+      <li>Students shall be punctual and regular for lectures, demonstrations and clinical experience. 75% attendance in theory is essential to be eligible to appear in DNC examination.</li>
+      <li>Students missing clinical experience and community health experience are required to make it up during their holidays and vacations.</li>
+      <li>Student should obtain atleast 50% marks in the test conducted in the Institute.</li>
+      <li>The discipline of the Institute is to be strictly observed.</li>
+    </ol>
+    <b>Any act of misbehavior, violation of rules, refusal from duty, poor performance in theory and practical, instigations for strikes and misconduct will be viewed seriously which can result in expulsion from the institute without any claims.</b>
+    </li>
+  </ul>
+   </div>
 <div class="footer">
 	<div class="col-sm-4 center-align gap">
 		<h3><strong>Connect With Us</strong></h3><hr>
