--- a/facilities.html
+++ b/facilities.html
@@ -40,7 +40,7 @@
 <body>
   <div class="top">
   <div class="headimg">
-  <img src="sai.png">
+  <img src="baba.png">
   </div>
   <div class="headname">
   <h2>Baba Haridass Institute of Nursing Education</h2>
@@ -88,7 +88,7 @@
             <ul>
               <li><a href="hostel.html">Hostel</a></li>
               <li><a href="facilities.html">Facilities</a></li>
-              <li><a href="extracurriculars.html">Extra Curriculur Activities</a></li>
+              <li><a href="extracurriculars.html">Rules & Regulations</a></li>
             </ul>
           </div>
         </div>
@@ -106,8 +106,44 @@
     <h3>Facilities</h3><hr align="left" style="border-bottom: 1px solid #ff751a;width: 100%;">
   </div>
   <div class="info">
-  	
-
+  <br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="glyphicon glyphicon-arrow-right maincol"></span>&nbsp;&nbsp; <span style="color: #ff751a; font-size: 18px;">Clinical Facilities</span><br><br>
+<ul>
+  The institute is affiliated to the following hospitals so as to provide clinical experience to the students:<br><br>
+  <table class="table-bordered table-striped" style="width: 70%;text-align: center;">
+    <tr>
+      <td>Sanjay Gandhi Hospital, Mangolpuri, Delhi-110083</td>
+      <td>300 beds</td>
+    </tr>
+    <tr>
+      <td>Rural Health and Training Centre, Najafgarh, Delhi-110043</td>
+      <td></td>
+    </tr>
+    <tr>
+      <td>Rao Tula Ram Memorial Hospital, Jafferpur, Delhi-110073</td>
+      <td>100 beds</td>
+    </tr>
+    <tr>
+      <td>Institute of Human Behaviour and Allied Sciences, Dilshad Garden, Delhi - 110095</td>
+      <td>250 beds</td>
+    </tr>
+  </table>
+</ul>
+<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="glyphicon glyphicon-arrow-right maincol"></span>&nbsp;&nbsp; <span style="color: #ff751a; font-size: 18px;">Library Facilities</span><br><br>
+<ul>Baba Haridass Institute of Nursing Education has a newly build separate Library with 1000 books and many professional journals. </ul>
+<br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="glyphicon glyphicon-arrow-right maincol"></span>&nbsp;&nbsp; <span style="color: #ff751a; font-size: 18px;">Recreational Facilities</span><br><br>
+<ul>
+  <ul style="list-style-type: disc;">
+    <li>Educational trips and excursions are arranged from time to time for the students.</li>
+    <li>There is an exclusive recreation room for student nurses.</li>
+    <li>T.V., VCD, Transistors and other indoor & outdoor games are available at the Institute.</li>
+    <li>Separate common room, canteen services, water coolers, electricity generators and overall greenery and sufficient open space is available in the campus.</li>
+    <li>Students participates in various SNA activities organized throughout the year.</li>
+  </ul>
+</ul>
+  </div>
   </div>
 <div class="footer">
 	<div class="col-sm-4 center-align gap">
