--- a/hostel.html
+++ b/hostel.html
@@ -40,7 +40,7 @@
 <body>
   <div class="top">
   <div class="headimg">
-  <img src="sai.png">
+  <img src="baba.png">
   </div>
   <div class="headname">
   <h2>Baba Haridass Institute of Nursing Education</h2>
@@ -88,7 +88,7 @@
             <ul>
               <li><a href="hostel.html">Hostel</a></li>
               <li><a href="facilities.html">Facilities</a></li>
-              <li><a href="extracurriculars.html">Extra Curriculur Activities</a></li>
+              <li><a href="extracurriculars.html">Rules & Regulations</a></li>
             </ul>
           </div>
         </div>
@@ -106,7 +106,141 @@
     <h3>Hostel</h3><hr align="left" style="border-bottom: 1px solid #ff751a;width: 100%;">
   </div>
   <div class="info">
-  
+      <br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="glyphicon glyphicon-arrow-right maincol"></span>&nbsp;&nbsp; <span style="color: #ff751a; font-size: 18px;">RULES & REGULATIONS FOR HOSTEL INMATES</span><br><br>
+ <ul>
+   <ul style="list-style-type: disc;">
+     <li>It is compulsory to stay in Hostel during training period.</li>
+     <li>Mobiles are strictly prohibited.</li>
+     <li>Students are advised not to keep large sum of money, any costly items / jewelry in their rooms. Authorities are not responsible in case of any loss or damage.</li>
+     <li>Cooking in rooms is strictly prohibited. No heater / room heaters are allowed in the rooms. Also no one is allowed to use press (Iron) or rod in their room. If found then heavy fine will be imposed. All the students must join the mess.</li>
+     <li>No visitors are allowed in the rooms.</li>
+     <li>Visiting Hours: 10:00 AM to 3:00 PM (Sunday only)</li>
+     <li>Students are responsible to keep their rooms absolutely clean and tidy.</li>
+     <li>All the students must join the mess.</li>
+     <li>The mess timing for different meals :<br><br>
+    <table class="table-bordered table-striped" style="width: 50%;">
+      <tr>
+        <td>Breakfast</td>
+        <td>7:30 AM to 8:30 AM</td>
+      </tr>
+      <tr>
+        <td>Lunch</td>
+        <td>1:00 PM to 2:00 PM</td>
+      </tr>
+      <tr>
+        <td>Tea</td>
+        <td>4:30 PM to 5:00 PM</td>
+      </tr>
+      <tr>
+        <td>Dinner</td>
+        <td>7:30 PM to 8:30 PM</td>
+      </tr>
+    </table><br>
+     </li>
+     <li>Come to the mess in a proper dress. Nobody is allowed to come in Mess with open hair. You should make your hair properly so that you avoid falling of hair in foodstuffs.</li>
+     <li>The mess crockery should not be taken to the rooms and don’t waste food.</li>
+     <li>The lights and fans must be switched off when leaving the hostel rooms or the common rooms.</li>
+     <li>The light should be off after 10:30 PM. No noise should be there in the room after 10:30 PM.</li>
+     <li>Water taps must be turned off after use. Wastage and carelessness will render the students to disciplinary action.</li>
+     <li>Students are responsible for the furniture, linen and any other hostel property issued to them and will have to pay for any loss or breakage.</li>
+     <li>Allotment of rooms is made by the warden but change can be made on request. Students are not allowed to change their rooms and furniture without the permission of Principal / Warden.</li>
+     <li>Home Sister / Warden must be informed in case of illness, any untoward incident, fight, theft etc. She will take necessary action and provide all the necessary assistance.</li>
+     <li>Student will take night pass, signed by the Principal, when going home and will hand over the same to Warden / Principal after getting it signed by the parents on return.</li>
+     <li>Before going out of hostel, students must write on the “Outgoing Register” their time of departure and the place of Visit. After reaching back to hostel signature must be put on the time of arrival.</li>
+     <li>All the students must be in the Hostel by 6:00 PM sharp. Disciplinary action will be taken against late corners. Failure to return back to hostel in time will be dealt seriously and strictly. Parents are requested to cooperate. </li>
+     <li>Parents can contact their children on specified days.</li>
+     <li>Students can contact their parents through school phone by paying the charges.</li>
+     <li>Wearing skin tight and short dresses are strictly prohibited.</li>
+     <li>Any expense towards the medical treatment of student will be borne by the student herself.</li>
+     <li>Training can be discontinued in case of misconduct.</li>
+   </ul>
+ </ul>
+ <br>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<span class="glyphicon glyphicon-arrow-right maincol"></span>&nbsp;&nbsp; <span style="color: #ff751a; font-size: 18px;">List of Articles required</span><br><br>
+<ul>
+  <table class= "table-striped table-bordered" style="width: 50%;text-align: center;">
+    <thead>
+      <td>Sr. No.</td>
+      <td>Item</td>
+      <td>Quantity</td>
+    </thead>
+    <tr>
+      <td>1.</td>
+      <td>White Suit</td>
+      <td>2</td>
+    </tr>
+    <tr>
+      <td>2.</td>
+      <td>White Dupatta</td>
+      <td>2</td>
+    </tr>
+    <tr>
+      <td>3.</td>
+      <td>White Canvas Shoes</td>
+      <td>1 pair</td>
+    </tr>
+    <tr>
+      <td>4.</td>
+      <td>White Socks</td>
+      <td>3 pairs</td>
+    </tr>
+    <tr>
+      <td>5.</td>
+      <td>Stethoscope</td>
+      <td>1</td>
+    </tr>
+    <tr>
+      <td>6.</td>
+      <td>Thermometer</td>
+      <td>1</td>
+    </tr>
+    <tr>
+      <td>7.</td>
+      <td>Black Net for hair bun</td>
+      <td>3</td>
+    </tr>
+    <tr>
+      <td>8.</td>
+      <td>Bed Sheet</td>
+      <td>2</td>
+    </tr>
+    <tr>
+      <td>9.</td>
+      <td>Pillow Cases</td>
+      <td>2</td>
+    </tr>
+    <tr>
+      <td>10.</td>
+      <td>Pillow</td>
+      <td>1</td>
+    </tr>
+    <tr>
+      <td>11.</td>
+      <td>Mattress</td>
+      <td>1</td>
+    </tr>
+    <tr>
+      <td>12.</td>
+      <td>Blanket</td>
+      <td>1</td>
+    </tr>
+    <tr>
+      <td>13.</td>
+      <td>Quilt</td>
+      <td>1</td>
+    </tr>
+    <tr>
+      <td>14.</td>
+      <td>Towel</td>
+      <td>2</td>
+    </tr>
+  </table><br>
+  <p><b>Note: </b>Other essential items <b>(Compulsory):</b> Plate, Glass, Bowl, Spoon, Insulated Jug (Thermos) preferably 2 litres, Bucket, Mug, Umbrella, Slippers, Lock, etc. 
+Adequate personal clothes.
+</p>
+</ul>
+  </div>
   </div>
 <div class="footer">
 	<div class="col-sm-4 center-align gap">
