--- a/index1.html
+++ b/index1.html
@@ -31,7 +31,7 @@
 <body>
   <div class="top">
   <div class="headimg">
-  <img src="sai.png">
+  <img src="baba.png">
   </div>
   <div class="headname">
   <h2>Baba Haridass Institute of Nursing Education</h2>
@@ -79,7 +79,7 @@
             <ul>
               <li><a href="hostel.html">Hostel</a></li>
               <li><a href="facilities.html">Facilities</a></li>
-              <li><a href="extracurriculars.html">Extra Curriculur Activities</a></li>
+              <li><a href="extracurriculars.html">Rules & Regulations</a></li>
             </ul>
           </div>
         </div>
